@@ -17,11 +17,6 @@
       <version>[3.1,3.3)</version>
     </dependency>
     <dependency>
-      <groupId>commons-digester</groupId>
-      <artifactId>commons-digester</artifactId>
-      <version>[1.7,1.8)</version>
-    </dependency>
-    <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
       <version>[1.0.4,1.2)</version>
