@@ -1,39 +1,0 @@
-/*
- * This file is part of PFIXCORE.
- *
- * PFIXCORE is free software; you can redistribute it and/or modify
- * it under the terms of the GNU Lesser General Public License as published by
- * the Free Software Foundation; either version 2 of the License, or
- * (at your option) any later version.
- *
- * PFIXCORE is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public License
- * along with PFIXCORE; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
- */
-
-package de.schlund.pfixxml.config.impl;
-
-import org.apache.commons.digester.Rule;
-import org.xml.sax.Attributes;
-import org.xml.sax.SAXException;
-
-/**
- * Rule throwing an exception when being triggered. Used to catch configuration
- * directives which should not be present.  
- * 
- * @author Sebastian Marsching <sebastian.marsching@1und1.de>
- */
-public class DefaultMatchRule extends Rule {
-
-    public void begin(String namespace, String name, Attributes attributes)
-            throws Exception {
-        throw new SAXException("Found element \"" + name + "\" [" + namespace
-                + "] at unexpected location");
-    }
-
-}
