@@ -1,3 +1,9 @@
+2009-01-08  Martin Leidig  <mleidig@schlund.de>
+
+	* src/de/schlund/pfixxml/config/impl/DefaultMatchRule.java: Removed
+	obsolete artifact which still depends on Apache digester
+	* pom.xml: Removed Apache digester dependency
+
 2009-01-07  Martin Leidig  <mleidig@schlund.de>
 
 	* projects/core/script/webservice_json.js: 
